# ububu

./: Makefile  main.py  pyproject.toml
VD_Games/: engine.py
VD_Games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
VD_Games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  VD_prime.py  VD_progression.py
