[project]
name = "ububu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "p>=1.5.0",
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_Games"]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[project.scripts]
VD-games = "VD_Games.scripts.VD_main:main"
VD-even = "VD_Games.scripts.VD_even:main"
VD-calc = "VD_Games.scripts.VD_calc:main"
VD-gcd = "VD_Games.scripts.VD_gcd:main"
